--- a/app/views/misc/issues.html.erb
+++ b/app/views/misc/issues.html.erb
@@ -25,6 +25,6 @@
     <li>Booking er ikke skrudd på siden betaling mangler</li>
     <li>Det er ikke mulig å laste opp legitimasjon</li>
     <li>Det er ikke mulig å få sendt sms kode på nytt uten å endre telefon nummer</li>
-    <li>Det er mulig å legge ut annonse med forsiking, selv om utleie pris
+    <li>Det er mulig å legge ut annonse med forsikring, selv om utleie pris
         per dag er under 160 kr, og verdi er under 4000 kr.</li>
 </ul>
