Added utility class for adding default summary expando, and adjusted a couple of strings

--- a/app/assets/stylesheets/skeleton.scss
+++ b/app/assets/stylesheets/skeleton.scss
@@ -414,6 +414,10 @@ summary::-webkit-details-marker {
   display: none;
 }
 
+.u-default-summary::-webkit-details-marker {
+  display: inline-block;
+}
+
 details.u-implode-summary {
   outline: none;
 }
