--- a/app/views/shared/_personal_bar.html.erb
+++ b/app/views/shared/_personal_bar.html.erb
@@ -12,7 +12,7 @@
                         { text: "Annonser",          path: users_ads_path },
                         { text: "Profil",            path: edit_users_path },
                         { text: "Forespørsler",      path: bookings_path },
-                        { text: "Leiehistorikk",     path: "#" },
+                        #  BETA: show this link again. { text: "Leiehistorikk",     path: "#" },
                         { text: "Favoritter",        path: users_favorite_ads_path },
                     ]
                     links.map { |e| e[:selected] = e[:text].downcase == selected.downcase }
