--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -21,8 +21,9 @@
         </div>
     </div>
 
-    <hr>
-    <%= render partial: "payment", locals: {booking: @booking} %>
+    <!-- <hr> -->
+    <%# FIXME: this belongs only in the first step of setting up a booking. so it now renders in the wrong place %>
+    <%#= render partial: "payment", locals: {booking: @booking} %>
     <hr>
     <%= render partial: "conversation_section", locals: {booking: @booking} %>
 </div>
