add mangopay to payment partial of booking page, as per contractual obligations

--- a/app/views/bookings/_payment.html.erb
+++ b/app/views/bookings/_payment.html.erb
@@ -18,4 +18,5 @@
         Om du vil avbestille etter det, da får du ikke refusjon.
         </small>
       </p>
+      <%= image_tag "logos/mangopay_powered_590x53.png", alt: "Powered by MangoPay", class: "", size: "270x26" %>
   <% end %>
