--- a/app/assets/stylesheets/_search.scss
+++ b/app/assets/stylesheets/_search.scss
@@ -1,6 +1,7 @@
 @import 'constants.scss';
 
 .search-result-view-chooser {
+    margin: $standard-spacing ($standard-spacing * 2) ;
 
     &__segment-holder {
         text-align: center;
@@ -9,6 +10,7 @@
     }
 
     &__segment-button {
+        text-transform: uppercase;
         display: inline-block;
         height: 38px;
         padding: 0 30px;
@@ -20,12 +22,12 @@
         letter-spacing: .1rem;
         text-decoration: none;
         white-space: nowrap;
-        background-color: transparent;
+        background-color: white;
         border-radius: 4px;
         border: 1px solid #bbb;
         cursor: pointer;
         box-sizing: border-box;
-        width: 49%;
+        width: 50%;
         float: left;
     }
 
