--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -99,6 +99,7 @@ $top-bar-height: 52px;
     &__avatar {
         vertical-align: middle;
         margin-bottom: 5px;
+        margin-right: $standard-spacing / 2;
     }
 
     &__notification-count {
@@ -118,7 +119,7 @@ $top-bar-height: 52px;
     }
 
     &__top-section {
-        margin-left: $standard-spacing / 2;
+        margin-left: $standard-spacing;
         margin-right: $standard-spacing / 2;
         text-decoration: none;
         color: white;
