--- a/app/assets/stylesheets/_sidbar_profile_summary.scss
+++ b/app/assets/stylesheets/_sidbar_profile_summary.scss
@@ -1,6 +1,7 @@
 @import 'constants.scss';
 
 .profile-sidebar-summary {
+    margin-top: $standard-spacing * 6;
     padding: $standard-spacing;
     padding-top: $standard-spacing * 2;
     padding-bottom: $standard-spacing * 2;
