Make profile page more obvious

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="eight columns">
+            <h1><%= @user.display_name_posessive %> profil</h1>
 
             <section class="profile-self-ads-section u-push-down">
                 <h2>Annonser</h2>
