Lots of særskriving fixed

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -7,7 +7,7 @@
                 Hvis du allerede har en konto på <strong>Facebook</strong>, hos
                 <strong>Google</strong> eller på <strong>SPiD</strong> kan du
                 <%= link_to "logge inn", new_user_session_path %> med den uten å opprette en egen
-                konto først. Det betyr også at hvis du har en bruke på <strong>VG</strong>,
+                konto først. Det betyr også at hvis du har en bruker på <strong>VG</strong>,
                 <strong>Aftenposten</strong> eller <strong>FINN</strong> allerede, så kan du logge rett inn.
             </p>
 
