--- a/app/views/users/finish_signup.html.erb
+++ b/app/views/users/finish_signup.html.erb
@@ -1,5 +1,5 @@
 <div id="add-email" class="container">
-  <h1>Add Email</h1>
+  <h1>Add e-post</h1>
   <%= form_for(current_user, :as => 'user', :url => finish_signup_path(current_user), :html => { role: 'form'}) do |f| %>
     <% if @show_errors && current_user.errors.any? %>
       <div id="error_explanation">
