--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,7 +13,7 @@
             <%= render partial: "edit_profile" %>
             <%= render layout: "gray_box", locals: {title: "Legg til kredittkort"} do %>
                 <%= link_to "Legg til kredittkort", user_payment_cards_path %>
-            <% end %>
+            <% end unless Rails.configuration.x.application_mode.beta %>
             <%= render partial: "locations/list" %>
             <%= render partial: "edit_registration" %>
             <%= render partial: "edit_identity" %>
@@ -24,7 +24,9 @@
             <%= render layout: "gray_box"  do %>
                 <ul>
                     <li><%= link_to "Rediger personalia", anchor: "personal-info" %></li>
-                    <li><%= link_to "Legg til kredittkort", user_payment_cards_path %></li>
+                    <% unless Rails.configuration.x.application_mode.beta %>
+                      <li><%= link_to "Legg til kredittkort", user_payment_cards_path %></li>
+                    <% end %>
                     <li><%= link_to "Adresser", anchor: "locations" %></li>
                     <li><%= link_to "Bytte passord", anchor: "password" %></li>
                     <li><%= link_to "Rediger tilkoblede kontoer", anchor: "identities" %></li>
