Renaming profile partials

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -155,7 +155,7 @@ $blueish: rgb(213, 235, 255);
     }
 }
 
-.own-profile-ad {
+.public-profile-ad {
     padding: $standard-spacing * 2;
     background-color: white;
     border-top: 1px solid $color-gray-background;
@@ -184,7 +184,7 @@ $blueish: rgb(213, 235, 255);
     }
 }
 
-.own-profile-feedback {
+.public-profile-feedback {
     padding: $standard-spacing * 2;
     background-color: white;
     border-top: 1px solid $color-gray-background;
