--- a/app/assets/stylesheets/_profile_quality_box.scss
+++ b/app/assets/stylesheets/_profile_quality_box.scss
@@ -11,7 +11,7 @@
     }
 
     & &__row {
-        border-bottom: solid thin $color-box-border;
+        border-bottom: solid thin $color-gray-background;
         padding: $standard-spacing;
     }
 
