--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -1,38 +1,31 @@
 <h1>Om plendit</h1>
 
-<p class="u-push-down">
-    Folk flest eier en god del ting man ikke bruker så ofte. Ta. f.eks biler,
-    båter eller tilhengere. Eller hva med den kajakken eller kanoen som du
-    kanskje ikke bruker hver dag? Folk flest trenger også av og til ting som
-    man nødvendigvis ikke ønsker å kjøpe. Hva om man kunne tjene penger på de
-    tingene man eier som ofte står lite brukt i boden, garasjen eller i hagen?
-    Og når man skulle trenge det i tillegg ha tilgang på de tingene man ikke
-    ønsker å kjøpe? 
+<p class="u-push-down-only">
+    Plendit, en forkortelse for «people lend it» er et nettsted der du enkelt
+    skal kunne leie til og fra privatpersoner og bedrifter.
 </p>
 
 <p>
-    Vi har laget <strong>«plendit»</strong> for akuratt dette. plendit er en
-    forkortelse for <strong>«people lend it».</strong> Eller «folk låner det»
-    om du vil. plendit er et sted der du enkelt kan låne til og fra
-    privatpersoner og forretninger i nærheten av deg.
+    Det er gratis å legge ut annonser, alle brukere blir verifisert og
+    betaling utføres trygt gjennom tjenesten. plendit gir utleier en ekstra
+    sikkerhet ved å tilby skadeforsikring fra IF. For å sikre en
+    god brukeropplevelse gir både utleier og leietaker hverandre en rating
+    av leieforholdet.  
 </p>
 
+<h2>Bakgrunn</h2>
 
 <p>
-    Det er gratis for både privatpersoner og forretninger å legge ut så mange
-    annonser man skulle ønske på plendit. Leietakerne leier enkelt gjennom
-    plendit og betaler sikkert gjennom tjenesten. Best av alt er at det er
-    trygt. Vi verifiserer alle som oppretter profil. Og for å sikre brukerne
-    en god opplevelse gir både utleier og leietaker hverandre en synlig rating
-    i etterkant. Om ikke det skulle være nok tilbyr vi også forsikring av
-    alle leieforhold gjennom IF Forsikring.
+    Vi som har startet plendit er til daglig ansatte i FINN.no. Med hjelp
+    av FINNs innovasjonsprogram «Sandbox» har vi fått muligheten til å
+    utvikle plendit. FINN og Sandbox har støttet oss med infrastruktur,
+    utviklingsverktøy, markedsføring samt god støtte og sparring fra
+    kolleger.
 </p>
 
 <p>
-    Så vær med og bedre miljøet og din egen økonomi ved å opprette en gratis
-    profil i dag. Lei ut bilen, skiboksen eller det partyteltet som du så
-    altfor sjelden bruker selv. Lei det du trenger og spar penger!
-    Ja: <strong>just plendit!</strong>
+    plendit er ikke en del av FINNs merkevare og FINN har således ikke
+    ansvar for tjenestens kvalitet eller innhold.
 </p>
 
 <h2>Partnere</h2>
@@ -42,4 +35,3 @@
 <%= link_to (image_tag "logos/innovasjon-norge.png", class: 'partner-logo'), 'http://www.innovasjonnorge.no/' %>
 <br>
 <%= link_to (image_tag "logos/mangopay_powered_590x53.png", class: 'partner-logo'), 'https://www.mangopay.com/' %>
-<br>
