--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -1,18 +1,20 @@
 <div class="search-result-view-chooser" data-controller="responsiveSearchResult">
-    <div class="search-result-view-chooser__segment-holder">
-        <button data-show-list-toggle class="search-result-view-chooser__segment-button search-result-view-chooser__segment-button--left search-result-view-chooser__segment-button--selected">Vis treff</button>
-        <button data-show-map-toggle class="search-result-view-chooser__segment-button search-result-view-chooser__segment-button--right">Vis kart</button>
+    <div class="search-result-view-chooser__inner">
+        <div class="search-result-view-chooser__segment-holder">
+            <button data-show-list-toggle class="search-result-view-chooser__segment-button search-result-view-chooser__segment-button--left search-result-view-chooser__segment-button--selected">Vis treff</button>
+            <button data-show-map-toggle class="search-result-view-chooser__segment-button search-result-view-chooser__segment-button--right">Vis kart</button>
+        </div>
     </div>
 </div>
 
 <div class="result-container" data-controller="resultContainerSizeAdjuster">
-    <div class="result-container__map-box" data-result-map>
+    <div class="result-container__map-box" data-result-map data-map-view>
         <div class="result-map" data-controller="resultMap">
             <script type="text/json" data-location-info><%= @result_json %></script>
         </div>
     </div>
 
-    <div class="result-container__hits-box">
+    <div class="result-container__hits-box" data-hits-view>
         <div class="container search-title-box">
             <h4 data-controller="hitCount">Viser <%= @ads.count %> av <%= @ads.total_count %> treff for <i><%= @term %></i></h4>
         </div>
