--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -30,8 +30,9 @@
 
 <h2>Partnere</h2>
 
-<%= link_to (image_tag "logos/finn_logo.png", class: 'partner-logo'), 'https://m.finn.no' %>
-<br>
-<%= link_to (image_tag "logos/innovasjon-norge.png", class: 'partner-logo'), 'http://www.innovasjonnorge.no/' %>
-<br>
-<%= link_to (image_tag "logos/mangopay_powered_590x53.png", class: 'partner-logo'), 'https://www.mangopay.com/' %>
+<div class="partner-box">
+    <%= link_to (image_tag "logos/if_150x148.png", class: 'partner-box__logo'), 'https://www.if.no/' %>
+    <%= link_to (image_tag "logos/innovasjon-norge.png", class: 'partner-box__logo'), 'http://www.innovasjonnorge.no/' %>
+    <%= link_to (image_tag "logos/finn_logo.png", class: 'partner-box__logo'), 'https://m.finn.no' %>
+    <%= link_to (image_tag "logos/mangopay_611x121.png", class: 'partner-box__logo'), 'https://www.mangopay.com/' %>
+</div>
