Fixed some prose on issues page

--- a/app/views/misc/issues.html.erb
+++ b/app/views/misc/issues.html.erb
@@ -13,7 +13,7 @@
     </p>
 </div>
 
-<h1>Kjente problemer</h1>
+<h1>Begrensninger i betaversjonen</h1>
 
 <p class="u-push-down">
     Det er fortsatt en del funksjonalitet som mangler, og en del bugs.
