--- a/app/views/misc/terms.html.erb
+++ b/app/views/misc/terms.html.erb
@@ -1,7 +1,518 @@
 <h1>Brukervilkår</h1>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, dolorem excepturi expedita inventore laboriosam magnam minima molestiae nemo quidem recusandae similique sunt voluptatem. Ab aliquid eius, ex maxime quam repellat!</p>
+
+<h2>
+1.      Innledning
+</h2>
+
+
+<p>
+Plendit er en plattform for deling og utleie av ting som driftes av selskapet Plendit AS (Org.nr. 
+
+915252230). Plendit AS er et programvareselskap som utvikler en markedsplass for leie, og har 
+
+ikke selv eierskap eller ansvar for noen av eiendelene som leies ut gjennom tjenesten.
+</p>
+<p>
+Bedrifter og personer kan legge ut noe som andre kan få leie. Utleier bestemmer prisen, og legger 
+
+inn når det er tilgjengelig. Interesserte ber om å få leie, og utleier kan takke ja til bestillingen. Så 
+
+avtales det når det skal hentes og leveres.
+</p>
+<p>
+Da trenger ikke leietaker å eie alt mulig selv, og utleier deler på det han eier og tjener litt på det. 
+
+Det er bra for utleier og leietaker, og det er bra for planeten.
+</p>
+
+<h2>
+2. Annonsering
+</h2>
+
+<p>
+Annonsen skal gi en riktig beskrivelse av utleie-objektet. 
+</p>
+
+<p>
+Kreativitet og humor er bra, men pass på at annonsen er sannferdig og ikke villedende. Beskriv 
+varen du leier ut, og hold meningene dine om konkurrenter, lover eller personer for deg selv.
+</p>
+
+<h3>
+2.1.  Én ting, én annonse
+</h3>
+
+<p>
+For at det skal være enkelt å finne frem (og dermed lettere for deg å få leid ut), ønsker vi at en 
+
+ting bare har en annonse på Plendit. 
+</p>
+
+<h3>
+2.2.  Bilder
+</h3>
+
+<p>
+Bildene i annonsen skal kun være bilder av det produktet du skal leie ut. Bilder som også 
+
+inneholder annen informasjon vil ikke bli godkjent. Logo skal heller ikke være for dominerende i 
+
+bildet. 
+</p>
+
+<h3>
+2.3.  Lenker
+</h3>
+
+<p>
+Du kan lenke til produktinformasjon eller -tester på internett. Som privatannonsør uten 
+
+forhandleravtale kan du ikke markedsføre din egen eller andres næringsvirksomhet, blogg eller 
+
+hjemmeside.
+</p>
+
+<h3>
+2.4.  Søkeord
+</h3>
+
+<p>
+Vi oppmuntrer deg til å bruke gode nøkkelord i beskrivelsen av varen, men vi tillater dessverre 
+
+ikke å bruke opplisting av irrelevante ord. Vi stanser annonser som åpenbart benytter seg av 
+
+mange irrelevante ord bare for å bli funnet ofte.
+</p>
+
+<h3>
+2.5.  Språk
+</h3>
+
+<p>
+Det er lurt å skrive på norsk siden de fleste søker på norsk. Svensk, dansk eller engelsk kan 
+
+fungere i et nødsfall.
+</p>
+
+<h3>
+2.6.  Opphavsrett på tekst og bilder
+</h3>
+
+<p>
+Plendit bruker av og til bilder og innhold fra Plendit-annonser i kommunikasjon og markedsføring. 
+
+Så legg bare ut tekst og bilder som det er greit at vi bruker. Legger du inn bilder med 
+
+gjenkjennbare personer, må du være sikker på at vedkommende også har akseptert disse 
+
+vilkårene.
+</p>
+
+<p>
+Bruker du andres tekst eller bilder må du innhente samtykke hos dem som har opphavsretten.
+</p>
+
+<h3>
+2.7.  Pris
+</h3>
+
+<p>
+Sett den reelle prisen på varen i prisfeltet. Hvis du er usikker på hva du kan forvente, kan du jo 
+
+sammenligne med andre, og forsøke deg frem. Det er enkelt å endre prisen underveis. Om prisen 
+
+ikke er reell, stanser vi annonsen. 
+</p>
+
+<p>
+Prisen i annonsen skal gjenspeile hva varen faktisk koster å leie inklusiv mva. Ønsker annonsøren å 
+
+synliggjøre pris eksklusiv mva kan dette gjøres i feltet «Beskrivelse», men prisen i annonsen skal 
+
+gjenspeile gjenstandens kostnad inklusiv mva.
+</p>
+
+<h3>
+2.8.  Du er ansvarlig
+</h3>
+
+<p>
+Legg aldri ut annonser for andre, eller for noe du ikke selv eier. Og be ikke andre legge ut 
+
+annonser for deg.
+</p>
+
+<h3>
+2.9. Svar på forespørsler
+</h3>
+
+<p>
+Varen markeres som utleid i tjenesten når den er booket og akseptert. Men hvis du ikke lenger 
+
+ønsker å leie ut varen eller har tid til å følge opp, så deaktiver annonsene på siden slik at det ikke 
+
+ligger ting til leie som faktisk ikke er tilgjengelig.
+</p>
+
+<p>
+Brukere eller varer som ikke svarer på forespørsler eller som stadig avviser (uten rimelig 
+
+forklaring) kan bli deaktivert og fjernet fra søkeresultatene.
+</p>
+
+<h2>
+3. Varer eller tjenester vi ikke tillater
+</h2>
+
+<p>
+Varer, tjenester eller dyr som det ikke er lov å selge, markedsføre, eie eller bruke i Norge 
+
+Valuta eller finansielle produkter.
+</p>
+
+<p>
+Annonser som kan oppfattes som støtende, for eksempel våpen, pornografi og erotiske leketøy
+
+Utstyr som ofte brukes i ulovlig virksomhet.
+</p>
+<p>
+
+Piratkopier – slik varehandel er med på å holde liv i kriminelle nettverk.
+
+Motorsykkel kan innebære høy risiko for både sjåfør og medtrafikanter og er derfor valgt bort.
+</p>
+
+<h2>
+4. Er du privatperson eller en bedrift
+</h2>
+
+<p>
+Det skal fremkomme i annonsen eller i forespørselen om du opptrer som en privatperson eller 
+
+som en bedrift. I noen tilfeller kan det være forskjellige regler for personer og bedrifter som kan 
+
+ha noe å si for pris, forsikringsvilkår eller andre ting.
+</p>
+<p>
+
+Du er en bedrift hvis du leier ut eller leier som et firma og ikke som privatperson. Hvis du er en 
+
+privatperson som tjener godt på å leie ut, så kan det være du faller under reglene for næring. Du 
+
+er selv pliktig til å sette deg inn i hvor mye du kan tjene, og om virksomheten din faller inn under 
+
+reglene for næringsvirksomhet.
+</p>
+
+<h2>
+5. Riktig identititet
+</h2>
+
+<p>
+For å kunne verifisere deg som bruker så må du dokumenterer identiteten din og at du er over 18 
+
+år. Du er ansvarlig for at informasjonen om deg til enhver tid er komplett og riktig, og at du kun 
+
+opptrer på vegne av deg selv. Du må dokumentere riktig fornavn og etternavn, epost-adresse, 
+
+nasjonalitet og fødselsdato. 
+</p>
+
+<h2>
+6. Hvordan håndterer Plendit regelbrudd? 
+</h2>
+
+<p>
+Plendit forbeholder seg retten til å forhåndskontrollere alle annonser, og stoppe de som bryter 
+
+annonsereglene. Dette inkluderer også annonser som allerede er publisert.
+</p>
+
+<p>
+Plendit kan ekskludere annonsører som bryter annonsereglene gjentatte ganger. Dette gjelder 
+
+også ved gjentatte klager og svært dårlig rating fra leietakere, ved politianmeldelser, misbruk av 
+
+tjenesten eller andre former for uakseptabel atferd.
+</p>
+
+<h2>
+7. Booking og Betaling
+</h2>
+
+<p>
+Er du interessert i å leie så sender du forespørsel om det gjennom Plendit. Da reserveres beløpet 
+
+på din konto. Hvis utleier godkjenner forespørselen din, så avtaler dere tid for overlevering. Hvis 
+
+ikke annet er avtalt så gjelder lokasjonen som er oppgitt på Plendit.
+</p>
+
+<p>
+Når gjenstanden hentes så godkjenner leietaker at den er i samsvar med annonsen, og det 
+
+reserverte beløpet belastes kontoen.
+</p>
+
+<p>
+Dersom partene blir enige om det før underveis, så kan leieperioden utvides. Da må en av partene 
+
+legge inn en forespørsel om å utvide leieperioden, og den andre må godkjenne det. Det er viktig 
+
+at avtalen registreres i Plendit før forlengelsen inntreffer. Ved utløp av avtalt leieforhold så 
+
+utløper også plendit forsikring. En skade som oppstår etter avtalens utløp, vil ikke lenger være 
+
+beskyttet av utleieforsikringen.  
+</p>
+
+<p>
+Dersom gjenstanden returneres som avtalt så anses leieforholdet som avsluttet. 
+</p>
+
+<p>
+Dersom gjenstanden ikke returneres til avtalt tid, så kan det skape problemer for utleier. Da kan 
+
+utleier trekke 150% av avtalt dagspris for hver dag det går over avtalen.
+</p>
+
+<p>
+Dersom gjenstanden har fått en skade, så er leietaker ansvarlig for at skaden utbedres eller 
+
+godtgjøres. Hvis gjenstanden er forsikret så må det registreres i skademeldingsskjema på plendit. 
+
+Da vil forsikringsselskapet ta kontakt og avtale nærmere om utbedring av skaden. Leietaker vil bli 
+
+belastet for egenandel.
+</p>
+
+<p>
+Ved å akseptere disse vilkårene, så aksepterer du også vilkårene til betalingsformidleren som 
+
+plendit benytter. Disse vilkårene kan du lese her: https://www.mangopay.com/faqs/
+</p>
+
+<h2>
+8. Skade / forsikring
+</h2>
+
+<p>
+Utleier vil kunne velge å forsikre det han leier ut. Leietaker er fremdeles ansvarlig for å levere 
+tilbake det han har leid i samme stand til avtalt tid. 
+</p>
+
+<p>
+Kjøretøy og eiendom er forsikringspliktig, og utleier er ansvarlig for at dette alltid er forsikret. Når 
+
+det gjelder andre ting så er det valgfritt for utleier om han vil forsikre. 
+</p>
+
+
+<h3>
+8.1. Leier du av en bedrift
+</h3>
+
+En bedrift som leier ut kan velge å benytte seg av plendit sin forsikring, eller annen forsikring. Da vil 
+
+det være andre vilkår for forsikring og en annen egenandel enn det som er standard i plendit. Hvis 
+
+det ikke fremkommer hva som er vilkårene så er du ansvarlig for å gjøre deg kjent med disse før du 
+
+godkjenner utleieobjektet hos bedriften.
+
+<h3>
+8.2. Leier du av en privatperson
+</h3>
+
+
+<p>
+Forsikringen er en del av prisen som leietaker betaler på Plendit. Utleier har mulighet til å forsikre 
+
+gjenstanden i leieperioden gjennom Plendit. Kjøretøy og eiendom har obligatorisk forsikring. Andre 
+
+ting er valgfritt.
+</p>
+
+<p>
+Hvis leietaker skader eller ødelegger gjenstanden, så skal den erstattes. Hvis gjenstanden er 
+
+forsikret så kan forsikringsselskapet kreve at leietaker dekker egenandel. 
+</p>
+
+
+<p>
+Egenandelen ved skade:
+</p>
+
+<pre>
+- Kjøretøy kr. 12.000
+    o Glasskader kr. 2.000
+    o Veihjelp kr. 500
+    o Underslag kr. 4.000
+- Eiendom kr. 6.000
+- Ting kr. 1.500
+</pre>
+
+
+<p>
+Egenandelen reserveres på kortet samtidig med leieforholdets start. Når gjenstanden returneres og 
+
+godkjennes av utleier så frigis reservasjonen.
+</p>
+
+<p>
+Skader skal meldes på skademeldingsskjemaet på Plendit sin nettside. Plendit videreformidler 
+
+kundeinformasjon og omfang av skade til If Skadeforsikring som forestår skadeoppgjør.
+</p>
+
+<p>
+Om ikke annet er angitt så gjelder forsikringen i Norden.
+</p>
+
+<p>
+Les mer om forsikringsvilkårene her.
+</p>
+
+<h2>
+9. Avbestilling og refusjon
+</h2>
+
+<p>
+Hva skjer hvis det er reservert av en leietaker, men han ikke dukker opp? 
+</p>
+
+
+<p>
+Eller hvis gjenstanden ikke er klar til avtalt tid?
+Penalties?
+</p>
+
+
+<h2>
+10. Skatter og avgifter
+</h2>
+
+
+<p>
+Alle brukere plikter å sette seg inn i, og innrette seg etter reglene og forskriftene der tjenesten 
+
+benyttes. Næringsvirksomhet kan innebære ulike former for skatter og avgifter, og brukeren er 
+
+selv ansvarlig for å sette seg inn i, og innrette seg etter dette.
+</p>
+
+<p>
+Plendit leverer kun en teknisk plattform til å dele mot vederlag, og fraskriver seg alt ansvar for 
+
+brukernes plikter ovenfor skattemyndigheter eller andre regulatoriske instanser. Dersom plendit 
+
+blir gjort kjent med at brukerne ikke innretter seg, så kan de utestenge annonser eller brukere fra 
+
+tjenesten.
+</p>
+
+
+<h2>
+11. Rating
+</h2>
+
+
+<p>
+Rating kan gi et galt bilde av en utleier eller leietaker. Men jo flere ratinger som legges inn på en 
+
+bruker, jo bedre kan man vurdere om man ønsker å ha et leieforhold med den aktuelle brukeren. 
+
+Plendit forbeholder seg retten til å fjerne beskrivelser som er uegnet på trykk, men vil som 
+
+hovedregel ikke legge seg borti hvilke tilbakemeldinger brukerne gir til hverandre.
+</p>
+
+<h2>
+12. Eksportbegrensning
+</h2>
+
+<p>
+Med mindre annet er avtalt skriftlig mellom partene på plendit, så gjelder utleie i det aktuelle 
+
+landet der utleieobjektet leveres ut. 
+
+Plendit-forsikringen gjelder kun i Norden.
+
+Dersom partene likevel er enige om at leieobjektet kan tas med til andre land, så er leietaker 
+
+pliktig til å innrette seg etter lover og forskrifter på det aktuelle stedet.
+</p>
+
+<h2>
+13. Tvister
+</h2>
+
+
+<p>
+Enhver tvistesak der Plendit skal involveres skal behandles av Oslo Tingrett.
+
+Tvistesaker der Plendit ikke har part, skal som hovedregel løses ved domstolen der utleie-objektet 
+
+ble levert ut, med mindre utleier og leietaker er enige om å løse det ved en annen domstol, og 
+
+Plendit ikke har part eller anklages i tvistesaken.
+</p>
+
+<h2>
+14. Endring av vilkår
+</h2>
+
+<p>
+Plendit forbeholder seg retten til å endre vilkår ved behov. Ved vesentlige endringer av vilkårene 
+</p>
+
+<h2>
+15. Personvern
+</h2>
+
+<p>
+Plendit vil ikke selge eller dele data med parter som ikke har saklig grunn til det. Saklig grunn vil 
+
+være informasjonsdeling til forsikringsselskap i forbindelse med skadesak, i forbindelse med 
+
+tvister eller anmeldelser.
+
+</p>
+
+<p>
+Behandling av alle personopplysninger skjer i overensstemmelse med bestemmelsene i den til 
+
+enhver tid gjeldende personopplysningslov (lov av 14. april 2000 nr. 31) og tilhørende forskrifter.
+
+Personopplysninger som en av Partene innehar, kan komme til å bli utlevert for å bli behandlet av 
+
+den annen Part på følgende måter;
+
+- For skadebehandling, eventuelt forsikringsoppgjør samt benyttet i markedsføringsøyemed og 
+
+analyseformål, og for administrasjon av forsikringen.
+
+De personopplysninger som en Part får fra den annen Part eller får tilgang til gjennom oppfyllelse 
+
+av denne avtalen, skal bare behandles av Parten i den utstrekning det er nødvendig for å oppfylle 
+
+forpliktelsene i denne avtalen.
+
+Partene skal ikke uten samtykke fra den andre Part, overlate til eller tilgjengeliggjøre for 
+
+tredjemann, personopplysninger som en av Partene får fra den annen Part eller ellers får tilgang 
+
+til i forbindelse med oppfyllelsen av denne avtalen. Personopplysninger kan imidlertid overlates 
+
+eller tilgjengeliggjøres for leietaker og/eller utleier når det er nødvendig for å oppfylle denne 
+
+avtalens formål.
+</p>
+
+
 
 <ul>
-  <li> <%= link_to 'MangoPay terms and conditions', 'docs/Mangopay_Terms-EN.pdf' %>.</li>
+  <li> <%= link_to 'Vilkår for MangoPay', 'docs/Mangopay_Terms-EN.pdf' %>.</li>
 </ul>
