Flattened profile page so it looks less unfinished

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,9 +1,5 @@
 @import "constants";
 
-$redish: rgb(255, 243, 236);
-$greenish: rgb(193, 236, 193);
-$blueish: rgb(213, 235, 255);
-
 .provider-box {
     height: 90px;
     padding-top: $standard-spacing;
@@ -42,41 +38,16 @@ $blueish: rgb(213, 235, 255);
         border-style: solid;
         border-width: 0 15px 18px 15px;
         width: 0;
-        border-color: transparent transparent $greenish transparent;
+        border-color: transparent transparent white transparent;
         bottom: -6px;
         left: 24px;
-
-        &--green {
-            // same as default
-        }
-
-        &--blue {
-            border-bottom-color: $blueish;
-        }
-
-        &--red {
-            border-bottom-color: $redish;
-        }
     }
 
     &__body {
         padding: $standard-spacing;
-        background-color: rgb(193, 236, 193);
+        background-color: white;
         border-radius: 12px;
     }
-
-    &__body--green {
-        // same as default
-    }
-
-    &__body--blue {
-        background-color: rgb(213, 235, 255);
-    }
-
-    &__body--red {
-        background-color: rgb(255, 243, 236);
-    }
-
 }
 
 .actionable-item {
