--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -2,6 +2,8 @@
 
 $top-bar-height: 52px;
 
+$double-top-bar-breakpoint: 639px;
+
 .top-bar {
     background-color: $color-plendit-blue;
     height: $top-bar-height;
@@ -9,7 +11,7 @@ $top-bar-height: 52px;
     color: white;
     position: relative;
 
-    @media screen and (max-width: 640px) {
+    @media screen and (max-width: $double-top-bar-breakpoint) {
         height: $top-bar-height * 2;
     }
 
@@ -86,7 +88,7 @@ $top-bar-height: 52px;
     &__rightbox {
         float: right;
 
-        @media screen and (max-width: 640px) {
+        @media screen and (max-width: $double-top-bar-breakpoint) {
             float: none;
         }
     }
