--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -66,6 +66,11 @@ $break-tiny: 640px;
         vertical-align: middle;
         line-height: 110px;
         background-color: rgba(0,0,0,0.5);
+
+        @media screen and (max-width: $break-tiny) {
+            height: 80px;
+            line-height: 80px;
+        }
     }
 
     &__video-holder {
