Phone number on contact page

--- a/app/views/misc/contact.html.erb
+++ b/app/views/misc/contact.html.erb
@@ -7,7 +7,7 @@
     </tr>
     <tr>
         <th>Telefon:</th>
-        <td></td>
+        <td><%= Plendit::Application.config.x.organization.phone_number %></td>
     </tr>
     <tr>
         <th>Postadresse:</th>
