--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -16,7 +16,13 @@
 
     <div class="result-container__hits-box" data-hits-view>
         <div class="container search-title-box">
-            <h4 data-controller="hitCount">Viser <%= @ads.count %> av <%= @ads.total_count %> treff for <i><%= @term %></i></h4>
+            <h4 data-controller="hitCount">
+                Treff
+                <%= ((@ads.current_page - 1) * @ads.default_per_page) + 1 %>
+                -
+                <%= [@ads.current_page * @ads.default_per_page, @ads.total_count].min %>
+                av
+                <%= @ads.total_count %></h4>
         </div>
         <%= render partial: "search_filter_section" %>
         <div class="result-container__hits-list" data-controller="resultList resultPaging" data-result-list>
