Use rails date selector for birthday

--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="two-thirds column">
                 <%= f.label :birthday, 'Fødselsdato:' %>
-                <%= f.date_field :birthday %>
+                <%= f.date_select :birthday%>
             </div>
         </div>
 
