Fixed insurance text

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -52,7 +52,7 @@
         </span>
         <% if @ad.category == 'bap' %>
             <br>
-            <small>* Forsikring kan bare velges dersom pris per døgn er minimum kr 160 og verdien på utleieobjektet er kr 4000 eller mer.</small>
+            <small>* Forsikring kan bare velges dersom verdien på utleieobjektet er kr 4000 eller mer.</small>
         <% end %>
     </label>
 
