Added helper for avatars. Use plendbot in notification list when there is no notifications

--- a/app/views/application/_notifications.html.erb
+++ b/app/views/application/_notifications.html.erb
@@ -21,7 +21,12 @@
             <% end %>
         <% else %>
             <div class="notification-box__item"> 
-                Ingen varsler.
+                <div class="notification-box__avatar">
+                    <%= plendbot_avatar(:small) %>
+                </div>
+                <div class="notification-box__body">
+                    Ingen varsler.
+                </div>
             </div>
         <% end %>
     </div>
